[FIX] web: tag names overflow from search bar
Before this commit:

- Long search content overflows the container.
- Search input and searched content are misaligned when the
content isn't long.

Steps to Reproduce:

- Type a very long string in the search bar.
- Press enter and observe that the content overflows the container.

After this commit:

- Max-width is set on input_container to keep searched content
within the container.
- Long searched content will be ellipsis, with full text viewable on hover.
- Max-width on searched content ensures alignment with search input.
-`$search-align-width` keeps the (Search...) aligned when input is long.

task-4011097

--- a/addons/web/static/src/search/search_bar/search_bar.scss
+++ b/addons/web/static/src/search/search_bar/search_bar.scss
@@ -16,4 +16,15 @@
         // It was causing issues with the hotkey overlay
         z-index: 0;
     }
+
+    .o_facet_value {
+        max-width: $search-align-width;
+    }
+
+    @media (max-width: 768px) {
+        $search-align-width: 8rem;
+        .o_facet_value {
+            max-width: $search-align-width;
+        }
+    }
 }
